flag-service/k8s/flag-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment-flag-service
  namespace: flag-service
  labels:
    app: flag-service
    instance: app-flag-service
spec:
  replicas: 3
  selector:
    matchLabels:
      app: flag-service
      instance: app-flag-service
  template:
    metadata:
      labels:
        app: flag-service
        instance: app-flag-service
    spec:
      containers:
        - name: flag-service
          # image: flag-service:local # Local
          image: 370930247065.dkr.ecr.us-east-2.amazonaws.com/flag-service:latest # Nuvem
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "300m"
              memory: "256Mi"
          ports:
            - containerPort: 8002
          readinessProbe:
            httpGet:
              path: /health
              port: 8002
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /health
              port: 8002
            initialDelaySeconds: 10
            periodSeconds: 15
