flag-service/k8s/flag-service-ingress.yaml
# flag-service
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-flag-service
  namespace: flag-service
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /flags(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: svc-flag-service
                port:
                  number: 80
